--- a/babyno.top/Analysis of the PS2 Game Save 3D Icons.html
+++ b/babyno.top/Analysis of the PS2 Game Save 3D Icons.html
@@ -10,10 +10,9 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>ps2mc-browser</li>
-<li>OpenGL
+<li>OpenSource
 categories:</li>
-<li>Tutorial</li>
+<li>Ps2mc</li>
 </ul>
 <hr/>
 <p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-10-04-parsing-ps2-3d-icon/1.gif"/></p>
