--- a/babyno.top/Analysis of the PS2 Memory Card Storage Format.html
+++ b/babyno.top/Analysis of the PS2 Memory Card Storage Format.html
@@ -10,16 +10,16 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>ps2mc-browser
+<li>OpenSource
 categories:</li>
-<li>Tutorial</li>
+<li>Ps2mc</li>
 </ul>
 <hr/>
 <p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-09-26-parsing-ps2-memcard-file-system/Playstation_2_Memory_Card-3.jpg"/></p>
 <h2>01 Preface</h2>
 <p>As an 80s gamer, the PS2 game console has always held a special place in my heart. Over 20 years have passed, yet recently, due to the emulator, I rediscovered it. After revisiting games for a while, I had a sudden idea: could I recall my younger self with my current knowledge? So, I began creating this series of articles, starting with analyzing the file system of the PS2 memory card and gradually delving into its file storage mechanism and the save files of each game. My goal is to ultimately simulate the classic 3D character rotation effect from game saves using Python and OpenGL, commemorating the classic game console that once accompanied me through my youth.</p>
 <p>This is the first piece in the series, analyzing the file system of the PS2 memory card.</p>
-<h2>02 词汇表</h2>
+<h2>02 Glossary</h2>
 <ul>
 <li><code>Memory Cards</code>
 The PS2 memory cards used for the PlayStation 2 console are specialized media that can be inserted into the host system. These two devices operate independently of each other.</li>
