--- a/babyno.top/Exporting Save Files From a PS2 Memory Card.html
+++ b/babyno.top/Exporting Save Files From a PS2 Memory Card.html
@@ -10,15 +10,14 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>ps2mc-browser</li>
-<li>Python
+<li>OpenSource
 categories:</li>
-<li>Tutorial</li>
+<li>Ps2mc</li>
 </ul>
 <hr/>
 <p>In the previous article, we analyzed the file system of the PS2 memory card. This time, we'll dive straight into practice and write Python code to export specific game saves. The complete code for this article can be found at: <a href="https://github.com/caol64/ps2mc-browser">ps2mc-browser</a>.</p>
-<h2>01 Parsing the <code>SuperBlock</code></h2>
-<p>The structure of the <code>SuperBlock</code> is as follows, with a size of 340 bytes:</p>
+<h2>01 Parsing the `SuperBlock</h2>
+<p><code>The structure of the</code>SuperBlock` is as follows, with a size of 340 bytes:</p>
 <pre><code class="lang-c++">struct SuperBlock {
     char magic[28];
     char version[12];
@@ -64,8 +63,8 @@ def read_cluster(self, n):  # n is the cluster number
     return bytes(byte_buffer)
 </code></pre>
 <h2>03 Constructing the <code>FAT</code> Matrix</h2>
-<p>From the previous article, we know the construction method of the <code>FAT</code> matrix as follows:
-<img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-09-29-exporting-file-from-ps2-memcard/%E5%AD%98%E5%82%A8%E5%8D%A1-FAT2.jpg"/></p>
+<p>From the previous article, we know the construction method of the <code>FAT</code> matrix as follows:</p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-09-29-exporting-file-from-ps2-memcard/%E5%AD%98%E5%82%A8%E5%8D%A1-FAT2.jpg"/></p>
 <pre><code class="lang-python">def __build_fat_matrix(self):
     # Build the indirect FAT from ifc_list
     indirect_fat_matrix = self.__build_matrix(self.ifc_list)
