--- a/babyno.top/Got the “JetBrains” Open-Source Free License.html
+++ b/babyno.top/Got the “JetBrains” Open-Source Free License.html
@@ -10,9 +10,9 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>Open-Source
+<li>OpenSource
 categories:</li>
-<li>Share</li>
+<li>Tutorial</li>
 </ul>
 <hr/>
 <p><img alt="jetbrains" src="https://resources.jetbrains.com/storage/products/company/brand/logos/jb_beam.png"/></p>
