--- a/babyno.top/PS2 Texture Image Encoding Algorithm “A1B5G5R5”.html
+++ b/babyno.top/PS2 Texture Image Encoding Algorithm “A1B5G5R5”.html
@@ -10,10 +10,10 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>Python</li>
+<li>OpenSource</li>
 <li>Algorithm
 categories:</li>
-<li>Tutorial</li>
+<li>Ps2mc</li>
 </ul>
 <hr/>
 <p>In the <a href="../rle-algorithm-in-ps2/">previous article</a>, we discussed the <code>RLE</code> image compression algorithm used in <code>PS2</code>. This time, let's delve into its texture mapping encoding algorithm—<code>A1B5G5R5</code>.</p>
