--- a/babyno.top/PS2纹理图片编码算法「A1B5G5R5」.html
+++ b/babyno.top/PS2纹理图片编码算法「A1B5G5R5」.html
@@ -10,10 +10,10 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>Python</li>
-<li>算法
+<li>OpenSource</li>
+<li>Algorithm
 categories:</li>
-<li>教程</li>
+<li>Ps2mc</li>
 </ul>
 <hr/>
 <p>在<a href="../rle-algorithm-in-ps2/">上一篇文章</a>里我们介绍了<code>PS2</code>使用的图片压缩算法<code>RLE</code>，这次我们再来研究一下它的纹理贴图编码算法——<code>A1B5G5R5</code>。</p>
