--- a/babyno.top/Run a large language models locally (3) - Enabling the Model to Use Tools Autonomously.html
+++ b/babyno.top/Run a large language models locally (3) - Enabling the Model to Use Tools Autonomously.html
@@ -11,9 +11,9 @@ TocOpen: true
 tags:</p>
 <ul>
 <li>Ollama</li>
-<li>AI
+<li>Agent
 categories:</li>
-<li>Tutorial</li>
+<li>AI</li>
 </ul>
 <hr/>
 <p>This article is the third in a series on running large language models (LLMs) locally. In the previous two articles, we introduced how to run <code>Ollama</code> locally and how to fine-tune the model's answers by providing an external database. This article will continue to explore how to use the <code>function-calling</code> feature to extend the model's capabilities and make it go further on the road to "intelligence".</p>
