--- a/babyno.top/Run a large language models locally.html
+++ b/babyno.top/Run a large language models locally.html
@@ -10,10 +10,9 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>Ollama</li>
-<li>AI
+<li>Ollama
 categories:</li>
-<li>Tutorial</li>
+<li>AI</li>
 </ul>
 <hr/>
 <p>With the rise of ChatGPT, LLMs (Large Language Models) have become a hot topic in the field of artificial intelligence and natural language processing. In this article, I will walk you through the process of running a large language model on your own personal computer.</p>
