--- a/babyno.top/The Application of the RLE Algorithm in PS2.html
+++ b/babyno.top/The Application of the RLE Algorithm in PS2.html
@@ -10,10 +10,10 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>Python</li>
+<li>OpenSource</li>
 <li>Algorithm
 categories:</li>
-<li>Tutorial</li>
+<li>Ps2mc</li>
 </ul>
 <hr/>
 <p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-10-16-rle-algorithm-in-ps2/run_length_f9030faa12.webp"/></p>
@@ -26,7 +26,7 @@ categories:</li>
 <p>The most significant bit of the <code>rle_code</code> serves as a flag. If this bit is <code>1</code>, it indicates that the following data block is "non-repeated data," similar to the example <code>ABCDE</code> mentioned earlier. In this case, subtracting the last 7 bits of <code>rle_code</code> from <code>0x8000</code> yields the length of the <code>data block</code>. Then, it's sufficient to extract the following <code>data block</code> of that length.</p>
 <p>If the flag bit is <code>0</code>, it indicates that the following data block is "repeated data," similar to <code>AAAAA</code>. In this case, <code>rle_code</code> represents the number of repetitions, and it suffices to extract a single <code>data block</code> following it, repeating it <code>rle_code</code> times.</p>
 <p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-10-16-rle-algorithm-in-ps2/2.gif"/></p>
-<p>伪代码如下：</p>
+<p>The pseudo code is as follows:</p>
 <pre><code class="lang-python">while rle_offset &lt; compressed_size:
     rle_code = rle_code_struct.unpack_from(self.byte_val, rle_offset)[0]
     rle_offset += 2
