--- a/babyno.top/“ps2mc-browser” Shader Code Analysis.html
+++ b/babyno.top/“ps2mc-browser” Shader Code Analysis.html
@@ -10,11 +10,9 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>ps2mc-browser</li>
-<li>OpenGL</li>
-<li>Python
+<li>OpenSource
 categories:</li>
-<li>Tutorial</li>
+<li>Ps2mc</li>
 </ul>
 <hr/>
 <p>How do we render the vertices and textures of polygons into a colorful scene? This is where OpenGL shaders come into play. Today, we'll discuss the shaders of <code>ps2mc-browser</code>.</p>
