--- a/babyno.top/「Apple快捷指令」 - 数据自动保存至Numbers.html
+++ b/babyno.top/「Apple快捷指令」 - 数据自动保存至Numbers.html
@@ -10,10 +10,9 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>快捷指令</li>
-<li>效率
+<li>Automation
 categories:</li>
-<li>教程</li>
+<li>快捷指令</li>
 </ul>
 <hr/>
 <p>今天开始我创建了一个「快捷指令」专题，专门分享自己常用的<code>Apple Shortcuts</code>。我是一个喜欢效率的人，所以能够自动化的工作我都尽量不进行繁琐的逐步操作。希望这些「快捷指令」也能为你们的生活带来便利。</p>
