--- a/babyno.top/「RLE」算法在PS2中的应用.html
+++ b/babyno.top/「RLE」算法在PS2中的应用.html
@@ -10,10 +10,10 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>Python</li>
-<li>算法
+<li>OpenSource</li>
+<li>Algorithm
 categories:</li>
-<li>教程</li>
+<li>Ps2mc</li>
 </ul>
 <hr/>
 <p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-10-16-rle-algorithm-in-ps2/run_length_f9030faa12.webp"/></p>
