--- a/babyno.top/「ps2mc-browser」新功能发布.html
+++ b/babyno.top/「ps2mc-browser」新功能发布.html
@@ -10,11 +10,9 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>ps2mc-browser</li>
-<li>Python</li>
-<li>开源
+<li>OpenSource
 categories:</li>
-<li>分享</li>
+<li>Ps2mc</li>
 </ul>
 <hr/>
 <p><code>ps2mc-browser</code>是一个<code>PS2</code>存档文件查看器，使用<code>OpenGL</code>画布显示存档里的3D动态图标。依赖如下：</p>
@@ -33,9 +31,9 @@ categories:</li>
 <h2>其它更新</h2>
 <p>每个存档动画的背景图案都保存在<code>icon.sys</code>文件里（具体请查阅<a href="../../10/parsing-ps2-3d-icon">解析PS2游戏存档3D图标</a>），实际上它是有透明度的，在<code>PS2</code>实体机上比较容易看出来。</p>
 <p>因此，在<code>OpenGL</code>渲染背景时，在<code>bg</code>背景层的后面，加了一层<code>skybox</code>。这两层的<code>z</code>坐标分布为<code>0.99</code>和<code>0.999</code>，且<code>skybox</code>的<code>RGBA</code>为<code>(0.6, 0.6, 0.6, 1)</code>不透明。这样如果<code>bg</code>有透明效果，那就会显示出<code>skybox</code>的颜色。</p>
-<p>以<code>Viewtiful Joe</code>为例，它的<code>bg</code>透明度是<code>100%</code>，如果不加<code>skybox</code>，其效果如下：
-<img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-11-20-ps2mc-browser-new-feature-release/3.gif"/></p>
-<p>加上后效果如下：
-<img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-11-20-ps2mc-browser-new-feature-release/4.gif"/></p>
+<p>以<code>Viewtiful Joe</code>为例，它的<code>bg</code>透明度是<code>100%</code>，如果不加<code>skybox</code>，其效果如下：</p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-11-20-ps2mc-browser-new-feature-release/3.gif"/></p>
+<p>加上后效果如下：</p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-11-20-ps2mc-browser-new-feature-release/4.gif"/></p>
 <h2>未解决问题</h2>
 <p>光源问题尚未解决，导致很多游戏光照不正确显示效果不佳。详情见<a href="../../10/parsing-ps2-3d-icon">解析PS2游戏存档3D图标</a>。</p>
