--- a/babyno.top/「ps2mc-browser」着色器代码分析.html
+++ b/babyno.top/「ps2mc-browser」着色器代码分析.html
@@ -10,11 +10,9 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>ps2mc-browser</li>
-<li>OpenGL</li>
-<li>Python
+<li>OpenSource
 categories:</li>
-<li>教程</li>
+<li>Ps2mc</li>
 </ul>
 <hr/>
 <p>如何将多边形的顶点和纹理渲染成缤纷多彩的画面呢？它就是OpenGL着色器。今天我们就要聊聊<code>ps2mc-browser</code>的着色器。</p>
