--- a/babyno.top/从PS2记忆卡中导出存档文件.html
+++ b/babyno.top/从PS2记忆卡中导出存档文件.html
@@ -10,10 +10,9 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>ps2mc-browser</li>
-<li>Python
+<li>OpenSource
 categories:</li>
-<li>教程</li>
+<li>Ps2mc</li>
 </ul>
 <hr/>
 <p>上一篇文章中我们解析了PS2存储卡的文件系统，这次直接实战，编写<code>python</code>代码导出指定的游戏存档。本篇文章完整代码可以访问：<a href="https://github.com/caol64/ps2mc-browser">ps2mc-browser</a>。</p>
@@ -64,8 +63,8 @@ def read_cluster(self, n): # n为cluster编号
     return bytes(byte_buffer)
 </code></pre>
 <h2>03 构建<code>FAT</code>矩阵</h2>
-<p>从上一篇文章知道<code>FAT</code>矩阵的构建方式如下：
-<img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-09-29-exporting-file-from-ps2-memcard/%E5%AD%98%E5%82%A8%E5%8D%A1-FAT2.jpg"/></p>
+<p>从上一篇文章知道<code>FAT</code>矩阵的构建方式如下：</p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-09-29-exporting-file-from-ps2-memcard/%E5%AD%98%E5%82%A8%E5%8D%A1-FAT2.jpg"/></p>
 <pre><code class="lang-python">def __build_fat_matrix(self):
     # 从ifc_list构建间接FAT
     indirect_fat_matrix = self.__build_matrix(self.ifc_list)
