--- a/babyno.top/使用Python和OpenGL渲染PS2存档3D图标.html
+++ b/babyno.top/使用Python和OpenGL渲染PS2存档3D图标.html
@@ -10,11 +10,9 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>ps2mc-browser</li>
-<li>Python</li>
-<li>OpenGL
+<li>OpenSource
 categories:</li>
-<li>教程</li>
+<li>Ps2mc</li>
 </ul>
 <hr/>
 <p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-10-09-rendering-ps2-3d-icon/1.jpg"/></p>
@@ -26,8 +24,8 @@ categories:</li>
 <li>ModernGL</li>
 <li>PyGLM</li>
 </ul>
-<h2>01 初始化<code>PyGame</code>和<code>ModernGL</code></h2>
-<p>第一步先初始化<code>PyGame</code>，设置窗口大小为<code>640x480</code>，<code>FPS</code>为<code>60</code>。开启<code>OpenGL</code>渲染模式，<code>OpenGL</code>的版本号设置为<code>3.3</code>。</p>
+<h2>01 初始化<code>PyGame</code>和`ModernGL</h2>
+<p><code>第一步先初始化</code>PyGame<code>，设置窗口大小为</code>640x480<code>，</code>FPS<code>为</code>60<code>。开启</code>OpenGL<code>渲染模式，</code>OpenGL<code>的版本号设置为</code>3.3`。</p>
 <pre><code class="lang-python">import pygame as pg
 
 pg.init()
