--- a/babyno.top/使用「快捷指令」在Mac上的任何地方创建文件.html
+++ b/babyno.top/使用「快捷指令」在Mac上的任何地方创建文件.html
@@ -10,10 +10,9 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>快捷指令</li>
-<li>效率
+<li>Automation
 categories:</li>
-<li>教程</li>
+<li>快捷指令</li>
 </ul>
 <hr/>
 <p>MAC有个令人“脑阔疼”的地方，没法在直接在某个目录下面创建文件，有的时候真的不方便。还好我们有“<strong>快捷指令</strong>”，这点问题不在话下。</p>
