--- a/babyno.top/在本地跑一个AI模型(4) - 会说话的模型.html
+++ b/babyno.top/在本地跑一个AI模型(4) - 会说话的模型.html
@@ -10,11 +10,9 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>Coqui</li>
-<li>TTS</li>
-<li>AI
+<li>TTS
 categories:</li>
-<li>教程</li>
+<li>AI</li>
 </ul>
 <hr/>
 <p>大家好，好久不见。前三篇教程我们聊了如何在本地搭建一个大语言模型，它能够理解和生成文本，这确实是一个非常有趣且有前景的应用领域。今天，我们将更进一步，让你的AI模型具备实际的语音输出能力。</p>
