--- a/babyno.top/在本地跑一个AI模型(5) - Stable Diffusion.html
+++ b/babyno.top/在本地跑一个AI模型(5) - Stable Diffusion.html
@@ -10,10 +10,9 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>Stable-Diffusion</li>
-<li>AI
+<li>Stable Diffusion
 categories:</li>
-<li>教程</li>
+<li>AI</li>
 </ul>
 <hr/>
 <p>在之前的文章中，我们使用<a href="https://babyno.top/tags/ollama/"><code>ollama</code></a>在本地运行了大语言模型，它可以与你聊天，帮助你理解和生成文本内容。使用<a href="https://babyno.top/tags/coqui/"><code>coqui-tts</code></a>在本地运行了文本转语音模型，它可以将大语言模型生成的文字转换成语音，让你的应用更有趣。今天我们将要介绍<code>Stable Diffusion</code>，一种扩散神经网络的深度学习模型，使用它可以生成各种不可思议的图片。</p>
