--- a/babyno.top/在本地跑一个AI模型(6) - Stable Diffusion模型微调.html
+++ b/babyno.top/在本地跑一个AI模型(6) - Stable Diffusion模型微调.html
@@ -10,10 +10,9 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>Stable-Diffusion</li>
-<li>AI
+<li>Stable Diffusion
 categories:</li>
-<li>教程</li>
+<li>AI</li>
 </ul>
 <hr/>
 <p>本文是<a href="https://babyno.top/tags/stable-diffusion/"><code>Stable Diffusion</code>系列</a>第二篇。</p>
