--- a/babyno.top/在本地跑一个大语言模型(3) - 让模型自主使用工具.html
+++ b/babyno.top/在本地跑一个大语言模型(3) - 让模型自主使用工具.html
@@ -11,9 +11,9 @@ TocOpen: true
 tags:</p>
 <ul>
 <li>Ollama</li>
-<li>AI
+<li>Agent
 categories:</li>
-<li>教程</li>
+<li>AI</li>
 </ul>
 <hr/>
 <p>在前两篇文章里，我们已经介绍了如何在本地运行<code>Ollama</code>以及如何通过提供外部数据库的方式微调模型的答案。本篇文章将继续探索如何使用“函数调用(<code>function-calling</code>)”功能以扩展模型能力，使其在“智能”的道路上越走越远。</p>
