--- a/babyno.top/在本地跑一个大语言模型.html
+++ b/babyno.top/在本地跑一个大语言模型.html
@@ -10,10 +10,9 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>Ollama</li>
-<li>AI
+<li>Ollama
 categories:</li>
-<li>教程</li>
+<li>AI</li>
 </ul>
 <hr/>
 <p>随着ChatGPT的兴起，LLM (Large Language Model，大语言模型) 已经成为人工智能和自然语言处理领域的热门话题。本篇文章我将和大家一起在自己的个人电脑上运行一个大语言模型。</p>
