--- a/babyno.top/用「Github」和「Cloudflare」自建博客.html
+++ b/babyno.top/用「Github」和「Cloudflare」自建博客.html
@@ -11,10 +11,9 @@ TocOpen: true
 tags:</p>
 <ul>
 <li>Cloudflare</li>
-<li>SEO</li>
-<li>建站
+<li>Github
 categories:</li>
-<li>教程</li>
+<li>建站</li>
 </ul>
 <hr/>
 <p>大约在十几年前，我也自己搭建过一个博客，在<code>Godaddy</code>买了虚拟主机和一个域名，搭建好<code>LAMP</code>环境，再装上<code>Wordpress</code>就开始折腾了。什么<code>百度统计</code>、<code>Google广告</code>、<code>Jiathis</code>等等全都安排上。那个时候在网上结识了一帮志同道合的网友，一起聊建站心得，甚至网站的<code>PR</code>值升到2时还兴奋的奔走相告。</p>
@@ -61,12 +60,12 @@ categories:</li>
 <p>第二种玩法是自己购买一个域名，将域名绑定在<code>Github Pages</code>上。这一步需要配置，参考官方文档。配置完后<code>Github</code>会自动帮你申请<code>SSL</code>证书，你的网站就可以使用<code>https</code>连接了。当然自有域名的好处还有很多，请看下一节。</p>
 <h3>使用<code>Cloudflare</code>优化网络</h3>
 <p><code>github</code>在国内访问速度非常不稳定，体验不佳。如果你有自己的域名，可以注册一个<code>Cloudflare</code>账号，稍微配置一下就可以优化访问速度。</p>
-<p>第一步，使用<code>Cloudflare</code>的<code>DNS</code>解析。如果你的域名不是在<code>Cloudflare</code>购买的，需要先将域名注册商那里的<code>DNS</code>解析服务器换成<code>Cloudflare</code>的，比如腾讯：
-<img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-11-08-new-hugo-blog/截屏2023-11-09%2011.56.25.webp"/></p>
-<p>第二步，使用<code>dig</code>命令查看<code>Github Pages</code>分配给你的域名的真实ip地址：
-<img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-11-08-new-hugo-blog/截屏2023-11-09%2012.04.03.webp"/></p>
-<p>第三步，在<code>Cloudflare</code>控制台创建你的域名指向上述ip地址的<code>DNS</code>解析<code>A记录</code>：
-<img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-11-08-new-hugo-blog/截屏2023-11-09%2012.12.49.webp"/></p>
+<p>第一步，使用<code>Cloudflare</code>的<code>DNS</code>解析。如果你的域名不是在<code>Cloudflare</code>购买的，需要先将域名注册商那里的<code>DNS</code>解析服务器换成<code>Cloudflare</code>的，比如腾讯：</p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-11-08-new-hugo-blog/截屏2023-11-09%2011.56.25.webp"/></p>
+<p>第二步，使用<code>dig</code>命令查看<code>Github Pages</code>分配给你的域名的真实ip地址：</p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-11-08-new-hugo-blog/截屏2023-11-09%2012.04.03.webp"/></p>
+<p>第三步，在<code>Cloudflare</code>控制台创建你的域名指向上述ip地址的<code>DNS</code>解析<code>A记录</code>：</p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-11-08-new-hugo-blog/截屏2023-11-09%2012.12.49.webp"/></p>
 <blockquote><p>嫌第二步和第三步麻烦的话，可以直接使用一条<code>CNAME</code>记录指向你的<code>github.io</code>域名，效果是一样的。</p>
 </blockquote>
 <p>其它的一些配置可以自己摸索一下，比如全站<code>SSL</code>和<code>JS</code>、<code>CSS</code>自动压缩等。设置好后，你可以使用一些测速网站来测试一下你的网站的访问速度，不出意外的话，应该比之前流畅多了。</p>
@@ -88,57 +87,65 @@ categories:</li>
 <h3>代码高亮</h3>
 <p>如果你不喜欢<code>papermod</code>默认的代码高亮风格，你需要禁用<code>highlight.js</code>并启用<code>Chroma</code>。大家注意以下步骤以避免踩坑。</p>
 <ul>
-<li>在<code>hugo.yml</code>里添加<pre><code class="lang-yaml">params:
-assets:
-  disableHLJS: true
+<li>在<code>hugo.yml</code>里添加</li>
+</ul>
+<pre><code class="lang-yaml">params:
+  assets:
+    disableHLJS: true
 </code></pre>
-</li>
-<li>在<code>cunstom.css</code>里添加：<pre><code class="lang-css">:root {
-  --hljs-bg: unset !important;
+<ul>
+<li>在<code>cunstom.css</code>里添加：</li>
+</ul>
+<pre><code class="lang-css">:root {
+    --hljs-bg: unset !important;
 }
 .dark {
-  --hljs-bg: unset !important;
+    --hljs-bg: unset !important;
 }
 </code></pre>
-</li>
-<li>在<code>hugo.yml</code>里添加，并把<code>style</code>换成<a href="https://xyproto.github.io/splash/docs/all.html">Chroma Style Gallery</a>里你喜欢的样式<pre><code class="lang-yaml">markup:
-highlight:
-  codeFences: true
-  guessSyntax: true
-  lineNos: true
-  # noClasses: false
-  style: monokailight
-</code></pre>
-你可以刷新下页面，看看效果，如果感觉不错，就不用再折腾了。如果你还有更高的追求，比如高亮模块可以根据黑暗模式自动切换，那就要使用自定义css。</li>
-<li>修改<code>hugo.yml</code><pre><code class="lang-yaml">markup:
-highlight:
-  codeFences: true
-  guessSyntax: true
-  lineNos: true
-  noClasses: false
-</code></pre>
-</li>
-<li>生成<code>css</code>文件<pre><code class="lang-shell">hugo gen chromastyles --style=monokailight &gt; syntax.css
-</code></pre>
-好了，你有<code>css</code>了，尽情折腾吧，比如黑暗模式变换背景颜色：
-```css
-.highlight&gt;.chroma {
-  background: var(--bg-c)!important;
-}</li>
+<ul>
+<li>在<code>hugo.yml</code>里添加，并把<code>style</code>换成<a href="https://xyproto.github.io/splash/docs/all.html">Chroma Style Gallery</a>里你喜欢的样式</li>
 </ul>
-<p>:root {
+<pre><code class="lang-yaml">markup:
+  highlight:
+    codeFences: true
+    guessSyntax: true
+    lineNos: true
+    # noClasses: false
+    style: monokailight
+</code></pre>
+<p>你可以刷新下页面，看看效果，如果感觉不错，就不用再折腾了。如果你还有更高的追求，比如高亮模块可以根据黑暗模式自动切换，那就要使用自定义css。</p>
+<ul>
+<li>修改<code>hugo.yml</code></li>
+</ul>
+<pre><code class="lang-yaml">markup:
+  highlight:
+    codeFences: true
+    guessSyntax: true
+    lineNos: true
+    noClasses: false
+</code></pre>
+<ul>
+<li>生成<code>css</code>文件</li>
+</ul>
+<pre><code class="lang-shell">hugo gen chromastyles --style=monokailight &gt; syntax.css
+</code></pre>
+<p>好了，你有<code>css</code>了，尽情折腾吧，比如黑暗模式变换背景颜色：</p>
+<pre><code class="lang-css">.highlight&gt;.chroma {
+    background: var(--bg-c)!important;
+}
+
+:root {
     --bg-c: #fafafa;
 }
 .dark {
     --bg-c: rgba(175, 184, 193, 0.2);
-}</p>
-<pre><code>
-### 评论模块
-静态网站添加评论模块有很多种方案，我选择的是[waline](https://waline.js.org/)，安装方法大家可以看它的官方文档。我把它部署在`Vercel`上，连接的数据库是`LeanCloud`，都是免费的。
-
-`waline`支持黑暗模式的代码：
-```css
-/* # Waline 黑暗模式 */
+}
+</code></pre>
+<h3>评论模块</h3>
+<p>静态网站添加评论模块有很多种方案，我选择的是<a href="https://waline.js.org/">waline</a>，安装方法大家可以看它的官方文档。我把它部署在<code>Vercel</code>上，连接的数据库是<code>LeanCloud</code>，都是免费的。</p>
+<p><code>waline</code>支持黑暗模式的代码：</p>
+<pre><code class="lang-css">/* # Waline 黑暗模式 */
 body.dark {
     /* 下面是官网默认的黑暗模式配色 */
     /* 常规颜色 */
@@ -192,8 +199,8 @@ body.dark {
 <p><code>TOC</code>就是侧边栏等文章大纲，如果不喜欢主题自带的<code>TOC</code>样式，可以自己定义。网上教程很多，不再赘述。比如下图：</p>
 <p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-11-08-new-hugo-blog/截屏2023-11-09%2014.31.59.webp"/></p>
 <h2>最后</h2>
-<p>到此为止，基本能满足我的需求了。最后放一张平时写文章时的图：
-<img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-11-08-new-hugo-blog/截屏2023-11-09%2014.39.11.webp"/></p>
+<p>到此为止，基本能满足我的需求了。最后放一张平时写文章时的图：</p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-11-08-new-hugo-blog/截屏2023-11-09%2014.39.11.webp"/></p>
 <p>我通常使用<code>VSCode</code>编写文章，实时预览<code>Markdown</code>格式非常方便。为了让图片在<code>VSCode</code>和网页上都能正常显示，我在项目的根目录下创建了一个名为<code>imgs</code>的软链接，指向<code>static/imgs</code>。这是因为<code>Hugo</code>在编译时会自动将<code>static</code>目录下的文件复制到网站的根目录下，所以使用绝对路径<code>/imgs/</code>可以在不同预览方式下找到文件。</p>
 <p>我还创建了一个名为<code>public</code>的软链接，指向我的<code>Github Pages</code>仓库。当我完成文章的编写并使用<code>Hugo</code>进行编译时，它会自动将输出文件复制到<code>public</code>目录，即我的<code>Github Pages</code>仓库。最后，我使用<code>git</code>命令将更改推送到远程仓库，从而完成了网站的发布。</p>
 <p>最后欢迎大家访问我新建的小站：<a href="https://babyno.top">路边的阿不</a>。</p>
