--- a/babyno.top/用「VSCode Task」自动化创建博客.html
+++ b/babyno.top/用「VSCode Task」自动化创建博客.html
@@ -10,10 +10,9 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>效率</li>
-<li>AI
+<li>Automation
 categories:</li>
-<li>教程</li>
+<li>建站</li>
 </ul>
 <hr/>
 <p>在之前的文章中，我提到我通常使用 <code>VSCode</code> 进行写作。这一次，我想分享一些提高平时写作效率的小技巧。同时，这也是我第一次尝试使用刚刚注册的 <code>ChatGPT</code>，看看它在辅助编码方面的能力如何。</p>
