--- a/informal.top/雅思备考 2024Q3.html
+++ b/informal.top/雅思备考 2024Q3.html
@@ -246,3 +246,35 @@
 <li>听力：练习3套+1遍精听，感觉有提升；读一遍数字；背单词，减少15个</li>
 <li>阅读：练习两篇，带上之前做的，耗时 15/21/25，7.0，勉强达标</li>
 </ul>
+<p>8.8-8.11：回家休息了4天，平均每天练习半小时听力</p>
+<p>8.12</p>
+<ul>
+<li>口语：练习2小时</li>
+<li>听力：练习了三套+一遍精听，两个6.0，一个6.5；读了一遍数字</li>
+<li>阅读：练习一套，新策略7.0</li>
+</ul>
+<p>8.13</p>
+<ul>
+<li>口语：练习两小时</li>
+<li>听力：两篇练习，两个6.5；读一遍数字</li>
+<li>阅读：两篇，一个7.0，一个5.5</li>
+</ul>
+<p>8.14</p>
+<ul>
+<li>口语：练习8个p2，大概5个p3；一个mock test 6.0</li>
+<li>听力：一篇练习6.0</li>
+<li>阅读：一篇练习7.0</li>
+</ul>
+<p>8.15</p>
+<ul>
+<li>口语：练习了将近30个p3话题</li>
+<li>听力：无</li>
+<li>阅读：无</li>
+</ul>
+<p>8.16 考试</p>
+<ul>
+<li>口语：说的很多，考官也不打断，p3似乎就问了三个问题就结束了，说明我说的真的很长，但用的高级词汇并不是很多；大概率要上6.0了</li>
+<li>听力：第一篇四道固定选择题，第二篇的6道填空题，第三篇的5道固定选择题，感觉答的都不错，其他选择填空答的比较一般，感觉6.0和6.5五五开</li>
+<li>阅读：第一篇耗时16分钟，太久了，这次三篇的难度差异没有上次那么大，答的还可以，但每篇都不是特别好，感觉大概率要6.5了</li>
+<li>写作：好久不写了，果然手生；先写大作文，用了45分钟，还没时间review；小作文写的比较拉夸；大作文感觉还可以，应该还能维持6.0</li>
+</ul>
