--- a/kexizeroing.github.io/A guide to Prompt Engineering.html
+++ b/kexizeroing.github.io/A guide to Prompt Engineering.html
@@ -220,7 +220,9 @@ She was born with a silver spoon in her mouth.
 <p>When discussing the distribution of exemplars within a prompt, we are referring to how many exemplars from different classes are present. For example, if you are performing binary sentiment analysis (positive or negative) on tweets, and you provide 3 positive tweets and 1 negative tweet as exemplars, then you have a distribution of 3:1. Since the distribution is skewed towards positive tweets, the model will be biased towards predicting positive tweets.</p>
 <p>The order of exemplars can also cause bias. For example, a prompt that has randomly ordered exemplars will often perform better than the prompt which contains positive tweets first, followed by negative tweets.</p>
 <h3>Jailbreak the Model</h3>
-<p>&lt;img alt="prompt-jailbreak" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/wk5lfd.png" width="700"&gt;</p>
+<p>&lt;img alt="prompt-jailbreak" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/wk5lfd.png" width="700"&gt;
+&lt;br&gt;</p>
+<p>JAILBREAK PROMPTS FOR ALL MAJOR AI MODELS: <a href="https://github.com/elder-plinius/L1B3RT45">https://github.com/elder-plinius/L1B3RT45</a></p>
 <h3>Prompt Injections</h3>
 <p>Prompt engineering can be used not only to improve performance but also the reliability of response from a safety perspective. Prompt injections aim to find vulnerabilities in LLMs.</p>
 <p>Prompt injection is used to hijack an LLM’s output by injecting an untrusted command that overrides instruction of a prompt. This could easily happen if you just concatenate your prompt with another user generated prompt.</p>
