--- a/kexizeroing.github.io/Add watermark to images.html
+++ b/kexizeroing.github.io/Add watermark to images.html
@@ -118,9 +118,10 @@ const handleCropSubmit = () =&gt; {
   if (canvas) {
     canvas.toBlob((blob) =&gt; {
       if (blob) {
+        console.log('file size:', blob.size / 1024 + 'KB')
         // new File(fileBits, fileName, options)
         const file = new File([blob], 'cropped-image.png', { type: 'image/png' })
-        handleFileUpload(file);
+        handleFileUpload(file)
       }
     }, 'image/png')
   }
