--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -86,7 +86,6 @@ top: true</p>
 <p>Awesome Web Apps that work without login: <a href="https://github.com/aviaryan/awesome-no-login-web-apps">https://github.com/aviaryan/awesome-no-login-web-apps</a></p>
 <p>A powerful media downloader with no bullshit: <a href="https://cobalt.tools">https://cobalt.tools</a></p>
 <p>A high-performance HTTP benchmarking tool written in Golang: <a href="https://github.com/six-ddc/plow">https://github.com/six-ddc/plow</a></p>
-<p>An initiative to improve JS packages performance: <a href="https://e18e.dev">https://e18e.dev</a></p>
 <hr/>
 <h2>CSS related</h2>
 <p>Modern CSS Solutions for Old CSS Problems: <a href="https://moderncss.dev">https://moderncss.dev</a></p>
@@ -159,6 +158,7 @@ top: true</p>
 <p>Open Source Tailwind components tailored for your AI and GPT: <a href="https://github.com/LangbaseInc/langui">https://github.com/LangbaseInc/langui</a></p>
 <p>Converting any layout you have to drag-to-swap layout: <a href="https://github.com/TahaSh/swapy">https://github.com/TahaSh/swapy</a></p>
 <p>Drag and drop for any experience on any tech stack: <a href="https://github.com/atlassian/pragmatic-drag-and-drop">https://github.com/atlassian/pragmatic-drag-and-drop</a></p>
+<p>Leaflet extension for various free tile providers: <a href="https://github.com/leaflet-extras/leaflet-providers">https://github.com/leaflet-extras/leaflet-providers</a></p>
 <hr/>
 <h2>React ecosystem</h2>
 <p>The Beginner's Guide to React: <a href="https://egghead.io/courses/the-beginner-s-guide-to-react">https://egghead.io/courses/the-beginner-s-guide-to-react</a> or <a href="https://www.youtube.com/watch?v=7_x4AuqHxlg">https://www.youtube.com/watch?v=7_x4AuqHxlg</a></p>
@@ -255,7 +255,7 @@ top: true</p>
 <p>Fast AI voice assistant: <a href="https://github.com/ai-ng/swift">https://github.com/ai-ng/swift</a></p>
 <p>Starter project for the Vercel AI SDK RAG guide: <a href="https://github.com/vercel/ai-sdk-rag-starter">https://github.com/vercel/ai-sdk-rag-starter</a></p>
 <p>Build AI apps locally that can do document Q&amp;A: <a href="https://github.com/ykhli/local-ai-stack">https://github.com/ykhli/local-ai-stack</a></p>
-<p>Anthropic's educational courses: <a href="https://github.com/anthropics/courses">https://github.com/anthropics/courses</a></p>
+<p>Semantic Image Search with Vercel AI SDK: <a href="https://github.com/vercel-labs/semantic-image-search">https://github.com/vercel-labs/semantic-image-search</a></p>
 <p>An Open Course on LLMs taught by practitioners: <a href="https://hamel.dev/blog/posts/course">https://hamel.dev/blog/posts/course</a></p>
 <hr/>
 <h2>Machine Learning</h2>
