--- a/kexizeroing.github.io/Debugging CSS.html
+++ b/kexizeroing.github.io/Debugging CSS.html
@@ -16,7 +16,7 @@ tags: [css]</p>
 </li>
 <li><p>When an element has a <code>position</code> value of <code>absolute</code>, it becomes a block-level element by default. This means that adding <code>inline-block</code> or <code>block</code> as the display type won’t affect it at all.</p>
 </li>
-<li><p>The <code>&lt;p&gt;</code> element represents a paragraph. It cannot contain block-level elements (including <code>&lt;p&gt;</code> itself).</p>
+<li><p>The <code>&lt;p&gt;</code> element represents a paragraph. It cannot contain block-level elements including <code>&lt;p&gt;</code> itself. For example, <code>&lt;p&gt;&lt;div&gt;hello&lt;/div&gt;&lt;/p&gt;</code> will be parsed as <code>&lt;p&gt;&lt;/p&gt;&lt;div&gt;hello&lt;/div&gt;&lt;p&gt;&lt;/p&gt;</code> in Chrome. <em>(Invalid HTML will be fixed by the browser)</em></p>
 </li>
 <li><p>When you apply a <code>float</code> to an element with a display type of <code>flex</code> or <code>inline-flex</code>, it won’t affect the element at all.</p>
 </li>
