--- a/kexizeroing.github.io/Intro to TypeScript.html
+++ b/kexizeroing.github.io/Intro to TypeScript.html
@@ -9,7 +9,7 @@ tags: [js]</p>
 <h2>updatedDate: "Aug 8 2024"</h2>
 <blockquote><p>There is a broad spectrum of what TypeScript can give you. On the one side of this spectrum, we have: writing good old JavaScript, without types or filling the gaps with any, and after the implementation is done — fixing the types. On the other side of the spectrum, we have type-driven development. Read from <a href="https://www.aleksandra.codes/fighting-with-ts">https://www.aleksandra.codes/fighting-with-ts</a></p>
 <p>TypeScript allows you to write complex yet elegant code. Some TypeScript users love to explore the possibilities of the type system and love to encode logic at type level. This practice is known as type gymnastics. The community also helps users to learn type gymnastics by creating fun and challenges such as <a href="https://github.com/type-challenges/type-challenges">type challenges</a>.</p>
-<p>Total TypeScript book: <a href="https://github.com/total-typescript/total-typescript-book/tree/main/book-content/chapters">https://github.com/total-typescript/total-typescript-book/tree/main/book-content/chapters</a></p>
+<p><a href="https://github.com/JoshuaKGoldberg/create-typescript-app">create-typescript-app</a> is a one-stop-shop solution to set up a new repository with comprehensive, configurable, opinionated TypeScript tooling.</p>
 </blockquote>
 <p>TypeScript is a strongly typed programming language that builds on JavaScript. It is currently developed and maintained by Microsoft as an open source project. TypeScript supports multiple programming paradigms such as functional, generic, imperative, and object-oriented.</p>
 <p>Every time you write JavaScript in e.g. VS Code, TypeScript runs behind the curtains and gives you information on built-in APIs. In fact, a lot of people think that they can live without TypeScript because JavaScript support is so fantastic in modern editors. Guess what’s, it has always been TypeScript. <em>(In VS Code, open a <code>.ts</code> file, <code>Cmd+Shift+P</code> enter "Select TypeScript Version" to check. If you select "Use Workspace Version", the setting is written to <code>.vscode/settings.json</code>.)</em></p>
@@ -384,6 +384,11 @@ type User = z.infer&lt;typeof User&gt;;
 type FormSchemaType = z.infer&lt;typeof formSchema&gt;;
 </code></pre>
 <blockquote><p><a href="https://github.com/fabian-hiller/valibot">Valibot</a> is very similar to Zod, helping you validate data easily using a schema. The biggest difference is the modular design and the ability to reduce the bundle size to a minimum.</p>
+<p>JSON Schema is a declarative language for defining structure and constraints for JSON data.</p>
+<ul>
+<li>Zod to JSON Schema: <a href="https://github.com/StefanTerdell/zod-to-json-schema">https://github.com/StefanTerdell/zod-to-json-schema</a></li>
+<li>JSON Schema to Zod: <a href="https://github.com/StefanTerdell/json-schema-to-zod">https://github.com/StefanTerdell/json-schema-to-zod</a></li>
+</ul>
 </blockquote>
 <h2>Adding Type Check to JavaScript</h2>
 <p>TypeScript provides code analysis for JavaScript and VS Code gives us TypeScript out of the box (TypeScript language server). With the addition of <code>//@ts-check</code> as the very first line in our JavaScript file, TypeScript became active and started to add red lines to code pieces that just don’t make sense.</p>
