--- a/kexizeroing.github.io/Rice course - intro to database.html
+++ b/kexizeroing.github.io/Rice course - intro to database.html
@@ -12,6 +12,8 @@ added: "Oct 21 2018"</p>
 <li>MySQL (1995)</li>
 <li>SQLite (2000)</li>
 </ul>
+<blockquote><p>SQLite is a software library that provides a relational database management system. If you have a Mac, sqlite3 should be available on there. <a href="https://github.com/kexiZeroing/node-sqlite-app">https://github.com/kexiZeroing/node-sqlite-app</a></p>
+</blockquote>
 <p>The Relational Model is usually denoted using <code>LIKES (DRINKER, COFFEE)</code></p>
 <p>&lt;img alt="relation model" src="https://raw.gitmirror.com/kexiZeroing/blog-images/e267d5c748689a64a58514b9c6776a4499eff478/BD61-413F-89E1-3A76798F04B1.png" width="500"&gt;</p>
 <p><strong>Keys (If the key for two tuples are the same, they must be the same tuple)</strong></p>
