--- a/babyno.top/Base64编码在「Apple快捷指令」中的妙用.html
+++ b/babyno.top/Base64编码在「Apple快捷指令」中的妙用.html
@@ -10,10 +10,9 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>快捷指令</li>
-<li>效率
+<li>Automation
 categories:</li>
-<li>教程</li>
+<li>快捷指令</li>
 </ul>
 <hr/>
 <p>苹果快捷指令是一款强大的工具，可以帮助我们自动化日常任务。在创建快捷指令时，有时我们需要添加附件，例如文本、图片、音频等。但是，苹果快捷指令本身并不支持添加附件，因此我们需要使用一些技巧来实现。</p>
@@ -25,7 +24,7 @@ categories:</li>
 <ol>
 <li>创建“numbers”文件，选择“文件”&gt;“保存”。</li>
 <li>使用如下“快捷指令”将其生成Base64字符串并保存在剪贴板中。
-<img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-12-14-the-wonders-of-base64-encoding-in-apple-shortcuts/截屏2023-12-14 16.08.54.webp"/></li>
+<img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-12-14-the-wonders-of-base64-encoding-in-apple-shortcuts/1.webp"/></li>
 <li>打开“快捷指令”应用，创建一个新的快捷指令。</li>
 <li>在“操作”列表中，找到“文本”&gt;“输入文本”。</li>
 <li>在“文本”字段中，粘贴Base64字符串。</li>
@@ -33,7 +32,7 @@ categories:</li>
 </ol>
 <p>现在，我们就可以使用这个快捷指令来生成“numbers”文件了。</p>
 <p>下图是“<a href="https://github.com/caol64/apple-shortcuts/blob/main/FuelingRecord/README.md">加油记录</a>”里的一个例子，首次执行快捷指令时，会自动创建一个模版numbers文件，这个模版文件就使用base64编码隐藏在快捷指令中。</p>
-<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-12-14-the-wonders-of-base64-encoding-in-apple-shortcuts/截屏2023-12-14%2016.15.56.webp"/></p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-12-14-the-wonders-of-base64-encoding-in-apple-shortcuts/2.webp"/></p>
 <h2>注意事项</h2>
 <p>Base64编码后的字符串可能会很长，因此我们需要注意输入文本的字数限制。此外，Base64编码后的字符串可能包含非法字符，因此我们需要在使用前进行检查。</p>
 <h2>总结</h2>
