--- a/babyno.top/Rendering PS2 Savegame 3D Icons using Python and OpenGL.html
+++ b/babyno.top/Rendering PS2 Savegame 3D Icons using Python and OpenGL.html
@@ -10,11 +10,9 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>ps2mc-browser</li>
-<li>Python</li>
-<li>OpenGL
+<li>OpenSource
 categories:</li>
-<li>Tutorial</li>
+<li>Ps2mc</li>
 </ul>
 <hr/>
 <p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-10-09-rendering-ps2-3d-icon/1.jpg"/></p>
