--- a/babyno.top/“ps2mc-browser” New Feature Release.html
+++ b/babyno.top/“ps2mc-browser” New Feature Release.html
@@ -10,11 +10,9 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>ps2mc-browser</li>
-<li>Python</li>
-<li>Open-Source
+<li>OpenSource
 categories:</li>
-<li>Share</li>
+<li>Ps2mc</li>
 </ul>
 <hr/>
 <p><code>ps2mc-browser</code> is a <code>PS2</code> memory card file viewer that utilizes an <code>OpenGL</code> canvas to display 3D dynamic icons from the memory card. It relies on the following dependencies:</p>
@@ -33,9 +31,9 @@ categories:</li>
 <h2>Other Updates</h2>
 <p>The background pattern of each animated memory card icon is stored in the <code>icon.sys</code> file (refer to <a href="../../10/parsing-ps2-3d-icon">Parsing PS2 Game Memory Card 3D Icons</a> for details). In reality, it has transparency, which is more apparent on a physical <code>PS2</code> console.</p>
 <p>Therefore, when rendering the background in <code>OpenGL</code>, an additional layer of <code>skybox</code> is added behind the <code>bg</code> background layer. The <code>z</code> coordinates of these two layers are distributed as <code>0.99</code> and <code>0.999</code>, and the <code>RGBA</code> of the <code>skybox</code> is <code>(0.6, 0.6, 0.6, 1)</code> opaque. This setup ensures that if the <code>bg</code> has transparency, the color of the <code>skybox</code> will be displayed.</p>
-<p>Taking <code>Viewtiful Joe</code> as an example, its <code>bg</code> has <code>100%</code> transparency. Without the <code>skybox</code>, the effect would be as follows:
-<img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-11-20-ps2mc-browser-new-feature-release/3.gif"/></p>
-<p>With the <code>skybox</code> added, the effect is as follows:
-<img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-11-20-ps2mc-browser-new-feature-release/4.gif"/></p>
+<p>Taking <code>Viewtiful Joe</code> as an example, its <code>bg</code> has <code>100%</code> transparency. Without the <code>skybox</code>, the effect would be as follows:</p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-11-20-ps2mc-browser-new-feature-release/3.gif"/></p>
+<p>With the <code>skybox</code> added, the effect is as follows:</p>
+<p><img alt="" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/babyno.top/content/imgs/posts/2023-11-20-ps2mc-browser-new-feature-release/4.gif"/></p>
 <h2>Unresolved Issues</h2>
 <p>The problem with lighting has not been resolved, resulting in incorrect lighting for many games and poor display effects. For more details, refer to <a href="../../10/parsing-ps2-3d-icon">Parsing PS2 Game Memory Card 3D Icons</a>.</p>
