--- a/babyno.top/再平凡的你，也是自己人生的主角.html
+++ b/babyno.top/再平凡的你，也是自己人生的主角.html
@@ -8,8 +8,14 @@ date: 2024-01-02 13:52:36
 draft: false
 ShowToc: true
 TocOpen: true
-tags: ["3shi"]</p>
-<h2>categories: ["想法"]</h2>
+tags:</p>
+<ul>
+<li>3shi</li>
+<li>Thoughts
+categories:</li>
+<li>想法</li>
+</ul>
+<hr/>
 <p>这是一篇个人的真实感想。</p>
 <p>历史的长河深延，其中存在着那些被歌颂为“唐宗宋祖、李白杜甫”的人，他们的名字在历史的巨幕上浩然猎猎，引得后人口诵留香。</p>
 <p>而我们，普通的你我他，可能无法成为历史笔下的英雄。我们的名字，我们的词句，我们的故事，在历史的洪流中可能几乎无影无踪，像海中漫天的砂尘。</p>
