--- a/babyno.top/申请到了「JetBrains」开源免费许可证.html
+++ b/babyno.top/申请到了「JetBrains」开源免费许可证.html
@@ -10,9 +10,9 @@ ShowToc: true
 TocOpen: true
 tags:</p>
 <ul>
-<li>开源
+<li>OpenSource
 categories:</li>
-<li>分享</li>
+<li>教程</li>
 </ul>
 <hr/>
 <p><img alt="jetbrains" src="https://resources.jetbrains.com/storage/products/company/brand/logos/jb_beam.png"/></p>
