--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 51 个博客、8857 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 51 个博客、8856 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
 
-<li><a href=kexizeroing.github.io/Notes%20on%20running%20code%20online%20in%20browser.html>2024-08-12 Notes on running code online in browser</a></li>
+<li><a href=jasonkayzk.github.io/%E4%B8%A4%E5%88%86%E9%92%9F%E9%80%90%E5%AD%97%E7%A8%BF.html>2024-08-13 两分钟逐字稿</a></li>
+
+<li><a href=jasonkayzk.github.io/%E4%B8%A4%E5%88%86%E9%92%9F%E6%95%99%E6%A1%88.html>2024-08-13 两分钟教案</a></li>
 
 <li><a href=iphyer.github.io/AWS%20%E4%BD%BF%E7%94%A8%E6%B3%A8%E6%84%8F%E7%82%B9%E6%80%BB%E7%BB%93.html>2024-08-10 AWS 使用注意点总结</a></li>
 
@@ -151,7 +153,7 @@
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202425%20-%20%E6%9C%88%E5%AD%90.html>2024-06-28 折返点 2425 - 月子</a></li>
 
-<li><a href=kexizeroing.github.io/How%20semantic%20image%20search%20works.html>2024-06-27 How semantic image search works</a></li>
+<li><a href=babyno.top/%E5%9C%A8%E8%8B%B9%E6%9E%9C%E8%AE%BE%E5%A4%87%E4%B8%8A%E8%BF%90%E8%A1%8CStable%20Diffusion%E6%A8%A1%E5%9E%8B.html>2024-06-28 在苹果设备上运行Stable Diffusion模型</a></li>
 
 <li><a href=hijiangtao.github.io/%E6%9D%A5%E7%AE%80%E5%8D%95%E8%81%8A%E8%81%8A%20AI%20Gateway.html>2024-06-27 来简单聊聊 AI Gateway</a></li>
 
@@ -278,8 +280,6 @@
 <li><a href=young-lord.github.io/Android%20%E9%9F%B3%E4%B9%90%20ID3%20%E6%A0%87%E7%AD%BE%E4%B9%B1%E7%A0%81%E5%88%9D%E6%8E%A2.html>2024-05-13 Android 音乐 ID3 标签乱码初探</a></li>
 
 <li><a href=jerkwin.github.io/%E4%B8%BB%E8%BD%B4%E5%88%86%E6%9E%90%E4%B8%8E%E4%B8%BB%E6%88%90%E5%88%86%E5%88%86%E6%9E%90%E7%9A%84%E6%84%9A%E8%A7%81.html>2024-05-13 主轴分析与主成分分析的愚见</a></li>
-
-<li><a href=yuanj.top/Publications.html>2024-05-11 Publications</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20360%20%E8%87%AA%E8%A1%8C%E8%BD%A6%E5%92%8C%E8%8B%B9%E6%9E%9C%E6%B4%BE.html>2024-05-11 新爸五年计划 - 360 自行车和苹果派</a></li>
 
@@ -1036,8 +1036,6 @@
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202345%20-%20%E5%A4%9C%E8%B7%91%E4%B8%8E%E7%9D%A1%E7%9C%A0.html>2023-11-13 折返点 2345 - 夜跑与睡眠</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20333%20%E4%B8%87%E5%9C%A3%E8%8A%82%E4%B8%8E%E7%B3%96.html>2023-11-13 新爸五年计划 - 333 万圣节与糖</a></li>
-
-<li><a href=yuanj.top/%E5%8F%8B%E9%93%BE.html>2023-11-11 友链</a></li>
 
 <li><a href=lihan3238.github.io/Ubuntu%E4%B8%8B%E5%AE%89%E8%A3%85%E5%8C%85%E6%97%B6%E7%BC%BA%E5%B0%91%E4%BE%9D%E8%B5%96%E7%9A%84%E5%BF%AB%E9%80%9F%E8%A7%A3%E5%86%B3%E6%96%B9%E6%B3%95.html>2023-11-11 Ubuntu下安装包时缺少依赖的快速解决方法</a></li>
 
