--- a/jasonkayzk.github.io/【顶】ようこそ、見知らぬ旅人.html
+++ b/jasonkayzk.github.io/【顶】ようこそ、見知らぬ旅人.html
@@ -15,15 +15,17 @@ tags: 日本語</p>
 <h2>ようこそ、見知らぬ旅人</h2>
 <h3>自己紹介</h3>
 <p>HPU電気工学学部研究、参加したことはACM、 组み込み式のソフトウェア开発、Bilibiliに投稿、 歌唱コンクール、TOEFL。日本語独学、大学3年目にネットワークプログラミング学び始め、Javaも独学した。</p>
-<p>SCUTの修士電気工学学部、独学することはJava、Python、Golang、データベース、コンピューターネットワーク、データ構造、アルゴリズム、ニューラルネットワーク、クラウドコンピューティング、ビッグデータなど。現在、Tencent Shenzhen-Golangのバックグラウンド開発に携わってる。</p>
+<p>SCUTの修士電気工学学部、独学することはJava、Python、Golang、データベース、コンピューターネットワーク、データ構造、アルゴリズム、ニューラルネットワーク、クラウドコンピューティング、ビッグデータなど。<del>現在、Tencent Shenzhen-Golangのバックグラウンド開発に携わってる。</del></p>
+<p>現在、 <a href="https://www.pzxy.edu.cn/">PZXY</a> School of Computer Science の 専任教員。</p>
 <p>自分のPCを組み立て、自分のサーバー、イントラネット浸透、DNS、パーソナルクラウドディスクを構築し、Alibaba Cloud、Tencent Cloud、Baidu Cloud、Huawei Cloud、Didi Cloud、その他のクラウド製品も 使った 。OCR、NLPなどをプレイした。</p>
-<p>猫すき、コカコーラ1日1本、 マクドナルド、RSS、IPFS、AKB48、NMB46、おたく、 太っている人(ちょっと)、共有するのが好き、詰まらないで普通な人間だ。</p>
+<p>猫すき、コカコーラ1日1本、 マクドナルド、RSS、IPFS、AKB48、NMB46、おたく、 <del>太っている人(ちょっと)</del>（体重が減ったぜ！〜🎉）、共有するのが好き、詰まらないで普通な人間だ。</p>
 <blockquote>  &lt;BR/&gt;
 
 <p>本科就读于HPU电气工程，玩过ACM、嵌入式、投稿过B站鬼畜、参加过歌唱比赛、考过托福、自学日语、大三开始接触网络编程，自学Java；</p>
-<p>硕士就读于SCUT电力学院，自学Java、Python、Golang、数据库、计算机网络、数据结构、算法、神经网络、云计算、大数据等，目前就职于Tencent深圳-Golang后台开发；</p>
+<p>硕士就读于SCUT电力学院，自学Java、Python、Golang、数据库、计算机网络、数据结构、算法、神经网络、云计算、大数据等，<del>目前就职于Tencent深圳-Golang后台开发；</del></p>
+<p>目前在 <a href="https://www.pzxy.edu.cn/">PZXY</a> 计算机学院任专任教师；</p>
 <p>个人喜欢折腾，组装过自己的PC，搭过自己的服务器、内网穿透、DNS、个人云盘，购买过阿里云、腾讯云、百度云、华为云、滴滴云等一众云产品、玩过OCR、NLP等；</p>
-<p>爱猫、每天一瓶肥宅快乐水、Macdonald轻度、RSS、IPFS、AKB48、NMB46、宅、胖子、爱分享、无聊的人；</p>
+<p>爱猫、每天一瓶肥宅快乐水、Macdonald轻度、RSS、IPFS、AKB48、NMB46、宅、<del>胖子</del>（减肥成功啦～🎉）、爱分享、无聊的人；</p>
 </blockquote>
 <hr/>
 <h3>言いたいばなし</h3>
