--- a/kexizeroing.github.io/Algorithm basics and sample problems.html
+++ b/kexizeroing.github.io/Algorithm basics and sample problems.html
@@ -7,7 +7,7 @@ description: ""
 added: ""
 top: true
 order: 4</p>
-<h2>updatedDate: "Aug 12 2024"</h2>
+<h2>updatedDate: "Aug 16 2024"</h2>
 <h3>TOC</h3>
 <ul>
 <li><a href="#toc">TOC</a></li>
@@ -30,28 +30,26 @@ order: 4</p>
 <li><a href="#sample-problems">Sample Problems</a></li>
 </ul>
 <h3>Binary Search</h3>
-<pre><code class="lang-js">const binarySearch = (array, target) =&gt; {
-  let startIndex = 0;
-  let endIndex = array.length - 1;
+<pre><code class="lang-js">const binarySearch = (nums, target) =&gt; {
+  let left = 0;
+  let right = nums.length - 1;
 
-  while(startIndex &lt;= endIndex) {
+  while (left &lt;= right) {
     // parseInt(i + (j - i) / 2)
-    let middleIndex = Math.floor((startIndex + endIndex) / 2);
-    if(target === array[middleIndex]) {
-      return middleIndex;
-    }
-    if(target &gt; array[middleIndex]) {
-      startIndex = middleIndex + 1;
-    }
-    if(target &lt; array[middleIndex]) {
-      endIndex = middleIndex - 1;
+    let mid = Math.floor((left + right) / 2);
+
+    if (nums[mid] === target) {
+      return mid;
+    } else if (nums[mid] &gt; target) {
+      right = mid - 1;
+    } else {
+      left = mid + 1;
     }
   }
 
   // If the target is not found,
-  // `startIndex` points to the first element that is greater than the target
-  // `endIndex` points to the last element that is less than the target
-  return -1;
+  // return the index where it would be if it were inserted in order.
+  return left;
 }
 </code></pre>
 <h3>Bubble Sort</h3>
@@ -233,6 +231,26 @@ function reverseList(head) {
 
   return prev;
 }
+
+// fast pointer moves forward `n` steps first,
+// then fast and slow pointers move forward together
+// until the fast pointer reaches the end of the linked list.
+function removeNthFromEnd(head, n) {
+  let dummy = new ListNode(0, head);
+  let fast = dummy;
+  let slow = dummy;
+
+  while (n--) {
+    fast = fast.next;
+  }
+  while (fast.next) {
+    slow = slow.next;
+    fast = fast.next;
+  }
+
+  slow.next = slow.next.next;
+  return dummy.next;
+}
 </code></pre>
 <h3>Undo/Redo stacks</h3>
 <pre><code class="lang-js">class UndoRedoManager {
@@ -317,16 +335,16 @@ var inorderTraversal = function(root) {
   if (root == null) return [];
   let result = [];
   let stack = [];
-  let pointerNode = root;
+  let current = root;
 
-  while (stack.length &gt; 0 || pointerNode !== null) {
-    if (pointerNode !== null) {
-      stack.push(pointerNode);
-      pointerNode = pointerNode.left;
+  while (stack.length &gt; 0 || current !== null) {
+    if (current !== null) {
+      stack.push(current);
+      current = current.left;
     } else {
-      pointerNode = stack.pop();
-      result.push(pointerNode.val);
-      pointerNode = pointerNode.right;
+      current = stack.pop();
+      result.push(current.val);
+      current = current.right;
     }
   }
   return result;
@@ -928,6 +946,24 @@ var lengthOfLongestSubstring = function(s) {
   return max;
 };
 </code></pre>
+<p>Given an array of positive integers nums and a positive integer target, return the minimal length of a subarray whose sum is greater than or equal to target.</p>
+<pre><code class="lang-js">var minSubArrayLen = function(target, nums) {
+  let minLength = Infinity;
+  let sum = 0;
+  let left = 0;
+
+  for (let right = 0; right &lt; nums.length; right++) {    
+    sum += nums[right];
+
+    while (sum &gt;= target) {
+      minLength = Math.min(minLength, right - left + 1);
+      sum -= nums[left];
+      left++;
+    }
+  }
+  return minLength === Infinity ? 0 : minLength;
+};
+</code></pre>
 <p>Find All Anagrams in a String. Given two strings <code>s</code> and <code>p</code>, return an array of all the start indices of <code>p</code>'s anagrams in <code>s</code>. For example, Input: s = "cbaebabacd", p = "abc"; Output: [0,6].</p>
 <pre><code class="lang-js">var findAnagrams = function(s, p) {
   let res = [];
@@ -1006,6 +1042,73 @@ function isSame(dict1, dict2) {
   return candidate;
 };
 </code></pre>
+<p>Given a string containing just the characters '(' and ')', return the length of the longest valid parentheses substring.</p>
+<pre><code class="lang-js">var longestValidParentheses = function(s) {
+  let stack = [];
+  let maxLength = 0;
+  let start = 0;
+
+  for (let i = 0; i &lt; s.length; i++) {
+    if (s[i] === '(') {
+      stack.push(i);
+    } else {
+      if (stack.length === 0) {
+        start = i + 1;
+      } else {
+        stack.pop();
+        if (stack.length === 0) {
+          maxLength = Math.max(maxLength, i - start + 1);
+        } else {
+          maxLength = Math.max(maxLength, i - stack[stack.length - 1]);
+        }
+      }
+    }
+  }
+};
+</code></pre>
+<p>Given an unsorted array of integers nums, return the length of the longest consecutive elements sequence. Take <code>[10, 4, 20, 1, 3, 2]</code> as an example, the longest consecutive elements sequence is <code>[1, 2, 3, 4]</code>.</p>
+<pre><code class="lang-js">var longestConsecutive = function(nums) {
+  let numSet = new Set(nums);
+  let longest = 0;
+
+  for (let n of nums) {
+    // check if n starts a new sequence
+    if (!numSet.has(n - 1)) {
+      let length = 1;
+
+      while (numSet.has(n + length)) {
+        length++;
+      }
+      longest = Math.max(longest, length);
+    }
+  }
+  return longest;
+};
+</code></pre>
+<p>Given an integer array nums, return an array answer such that <code>answer[i]</code> is equal to the product of all the elements of nums except <code>nums[i]</code>.</p>
+<pre><code class="lang-js">var productExceptSelf = function(nums) {
+  let n = nums.length;
+  let output =[];
+
+  let leftProducts =[];
+  let rightProducts =[];
+  leftProducts[0] = 1;
+  rightProducts[n - 1] = 1;
+
+  for (let i = 1; i &lt; n; i++) {
+    leftProducts[i] = leftProducts[i - 1] * nums[i - 1];
+  }
+
+  for (let i = n - 2; i &gt;= 0; i--) {
+    rightProducts[i] = rightProducts[i + 1] * nums[i + 1];
+  }
+
+  for (let i = 0; i &lt; n; i++) {
+    output[i] = leftProducts[i] * rightProducts[i];
+  }
+  return output;
+};
+</code></pre>
 <p>Given an array of integers temperatures represents the daily temperatures, return an array answer such that <code>answer[i]</code> is the number of days you have to wait after the <code>ith</code> day to get a warmer temperature. If there is no future day for which this is possible, keep <code>answer[i] == 0</code> instead.</p>
 <pre><code class="lang-js">var dailyTemperatures = function(temperatures) {
   let stack = [];
@@ -1021,6 +1124,27 @@ function isSame(dict1, dict2) {
   }
 
   return res;  
+};
+</code></pre>
+<p>The next greater element of x in an array is the first greater element that is to the right of x in the same array. You are given two distinct arrays, where nums1 is a subset of nums2. For each <code>0 &lt;= i &lt; nums1.length</code>, find the index j such that <code>nums1[i] == nums2[j]</code> and determine the next greater element of <code>nums2[j]</code> in nums2. If there is no next greater element, then the answer for this query is -1.</p>
+<pre><code class="lang-js">var nextGreaterElement = function(nums1, nums2) {
+  // key is a number from nums2
+  // value is its next greater number
+  let map = new Map();
+  let stack = [];
+
+  for (let num of nums2) {
+    while (stack.length &amp;&amp; num &gt; stack[stack.length - 1]) {
+      map.set(stack.pop(), num);
+    }
+    stack.push(num);
+  }
+
+  for (let i = 0; i &lt; nums1.length; i++) {
+    nums1[i] = map.has(nums1[i]) ? map.get(nums1[i]) : -1;
+  }
+
+  return nums1;
 };
 </code></pre>
 <p>Given an array of integers and an integer <code>k</code>, you need to find the total number of continuous subarrays whose sum equals to <code>k</code>. For example, Input: nums = <code>[1,1,1]</code>, k = 2; Output: 2</p>
@@ -1114,6 +1238,24 @@ var subarraySum = function(nums, k) {
   }
 };
 </code></pre>
+<p>Given an integer array nums, find the subarray with the largest sum, and return its sum.</p>
+<pre><code class="lang-js">var maxSubArray = function(nums) {
+  let sum = 0;
+  let max = -Infinity;
+
+  for (let i = 0; i &lt; nums.length; i++) {
+    sum += nums[i];
+    max = Math.max(max, sum);
+
+    // It's better to start a fresh subarray from the next element
+    // rather than carrying forward a negative sum.
+    if (sum &lt; 0) {
+      sum = 0;
+    }
+  }
+  return max;
+};
+</code></pre>
 <p>Given a non-empty array of integers nums, the degree of this array is defined as the maximum frequency of any one of its elements. Your task is to find the smallest possible length of a subarray of nums, that has the same degree as nums.</p>
 <pre><code class="lang-js">var findShortestSubArray = function(nums) {
   let firstOccurrence = new Map();
@@ -1177,6 +1319,33 @@ var subarraySum = function(nums, k) {
   return true;
 };
 </code></pre>
+<p>There are n gas stations along a circular route. Your car costs <code>cost[i]</code> of gas to travel from the ith station to its next station. You begin the journey with an empty tank at one of the gas stations. Return the starting gas station's index if you can travel around the circuit once in the clockwise direction, otherwise return -1.</p>
+<pre><code class="lang-js">var canCompleteCircuit = function(gas, cost) {
+  // gas:  [1, 2, 3, 4, 5]
+  // cost: [3, 4, 5, 1, 2]
+  // First, can we know if a solution exists?
+  // If `sum of gas - sum of cost &lt; 0`, there is no way to complete a round trip.
+
+  let totalTank = 0;
+  let currentTank = 0;
+  let start = 0;
+
+  for (let i = 0; i &lt; gas.length; i++) {
+    const netCost = gas[i] - cost[i];
+    totalTank += netCost;
+    currentTank += netCost;
+
+    if (currentTank &lt; 0) {
+      start = i + 1;
+      currentTank = 0;
+    }
+  }
+  return totalTank &lt; 0 ? -1 : start;
+
+  // The key insight here is that if you can't reach a station j from station i, 
+  // you also can't reach it from any station between i and j.
+};
+</code></pre>
 <p>Suppose an array sorted in ascending order is rotated at some pivot unknown to you beforehand. (i.e., <code>[0,1,2,4,5,6,7]</code> might become <code>[4,5,6,7,0,1,2]</code>). You are given a target value to search. If found in the array return its index, otherwise return -1. You may assume no duplicate exists in the array.</p>
 <pre><code class="lang-js">var search = function(nums, target) {
   let start = 0;
@@ -1205,6 +1374,27 @@ var subarraySum = function(nums, k) {
   }
 
   return -1;
+};
+</code></pre>
+<p>You are given an m x n integer matrix. Each row is sorted in non-decreasing order. The first integer of each row is greater than the last integer of the previous row. Given an integer target, return true if target is in matrix or false otherwise.</p>
+<pre><code class="lang-js">var searchMatrix = function(matrix, target) {
+  let left = 0; 
+  let right = matrix.length - 1;
+  let mid;
+
+  while (left &lt;= right) {
+    mid = Math.floor((left + right ) / 2);
+    if (target &gt;= matrix[mid][0] &amp;&amp; target &lt;= matrix[mid][matrix[mid].length - 1]) {
+      break;
+    }
+    if (target &gt; matrix[mid][0]) {
+      left = mid + 1;
+    } else {
+      right = mid - 1;
+    }
+  }
+
+  return binarySearch(matrix[mid], target);
 };
 </code></pre>
 <p>a) Find the integer square root; b) Check if a number is the perfect square number.</p>
@@ -1365,6 +1555,17 @@ function checkPerfectSquare(num) {
   return root;
 };
 </code></pre>
+<p>Given the root of a binary tree, invert the tree, and return its root.</p>
+<pre><code class="lang-js">var invertTree = function(root) {
+  if (root === null) return root;
+
+  [root.left, root.right] = [root.right, root.left];
+  invertTree(root.left);
+  invertTree(root.right);
+
+  return root;
+};
+</code></pre>
 <p>Given the root of a binary tree, determine if it is a valid binary search tree.</p>
 <pre><code class="lang-js">var isValidBST = function(root) {
   const helper = (root, min, max) =&gt; {
@@ -1392,6 +1593,55 @@ function checkPerfectSquare(num) {
   root.right = buildTree(preorder.slice(mid + 1), inorder.slice(mid + 1));
 
   return root;
+};
+</code></pre>
+<p>Given the root of a binary search tree, and an integer k, return the kth smallest value (1-indexed) of all the values of the nodes in the tree.</p>
+<pre><code class="lang-js">var kthSmallest = function(root, k) {
+  // BST -&gt; in-order traversal
+  let n = 0;
+  let stack = [];
+  let current = root;
+
+  while (stack.length &gt; 0 || current) {
+    while (current) {
+      stack.push(current);
+      current = current.left;
+    }
+
+    current = stack.pop();
+    n++;
+    if (n === k) {
+      return current.val;
+    }
+    current = current.right;
+  }
+};
+</code></pre>
+<p>Given the root of a binary tree, imagine yourself standing on the right side of it, return the values of the nodes you can see ordered from top to bottom.</p>
+<pre><code class="lang-js">var rightSideView = function(root) {
+  if (!root) return [];
+
+  let result = [];
+  let queue = [root];
+  while (queue.length) {
+    let levelSize = queue.length;
+
+    for (let i = 0; i &lt; levelSize; i++) {
+      let node = queue.shift();
+
+      if (i === levelSize - 1) {
+        result.push(node.val);
+      }
+
+      if (node.left) {
+        queue.push(node.left);
+      }
+      if (node.right) {
+        queue.push(node.right);
+      }
+    }
+  }
+  return result;
 };
 </code></pre>
 <p>Given a 2d grid map of '1's (land) and '0's (water), count the number of islands. An island is surrounded by water and is formed by connecting adjacent lands horizontally or vertically. You may assume all four edges are all surrounded by water.</p>
@@ -1447,6 +1697,27 @@ function dfs(grid, i, j, rows, cols) {
     }
   }
   return ans;
+};
+</code></pre>
+<p>Given an integer array nums, return the length of the longest strictly increasing subsequence. For example, <code>[10,9,2,5,3,7,101,18]</code>'s longest increasing subsequence is <code>[2,3,7,101]</code>.</p>
+<pre><code class="lang-js">var lengthOfLIS = function(nums) {
+  if (nums.length === 0) {
+    return 0;
+  }
+  // dp[i] represents the length of the LIS ending at index i
+  let dp = Array(nums.length).fill(1);
+  let maxLength = 1;
+
+  for (let i = 1; i &lt; nums.length; i++) {
+    // iterate index before i
+    for (let j = 0; j &lt; i; j++) {
+      if (nums[j] &lt; nums[i]) {
+        dp[i] = Math.max(dp[i], dp[j] + 1);
+      }
+    }
+    maxLength = Math.max(maxLength, dp[i]);
+  }
+  return maxLength;
 };
 </code></pre>
 <p>Best Time to Buy and Sell Stock. You are given an array prices where <code>prices[i]</code> is the price of a given stock on the <code>ith</code> day.</p>
