--- a/kexizeroing.github.io/Explore interactive blog cells.html
+++ b/kexizeroing.github.io/Explore interactive blog cells.html
@@ -4,8 +4,9 @@
 title: "Explore interactive blog cells"
 slug: explore-interactive-blog-cells
 description: ""
-added: "Aug 25 2023"</p>
-<h2>tags: [other]</h2>
+added: "Aug 25 2023"
+tags: [other]</p>
+<h2>updatedDate: "Aug 12 2024"</h2>
 <p><a href="https://github.com/rameshvarun/blog-cells">blog-cells</a> adds interactive code snippets to any blog or webpage. It's worth a try at here.</p>
 &lt;p&gt;
 &lt;script type="text/notebook-cell" data-autorun="true"&gt;
@@ -20,4 +21,100 @@ const response = await fetch("https://pokeapi.co/api/v2/pokemon/ditto");
 const data = await response.json();
 console.log(data);
 &lt;/script&gt;<p>&lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/blog-cells@0.4.1/dist/blog-cells.css" /&gt;</p>
-&lt;script type="module" src="https://cdn.jsdelivr.net/npm/blog-cells@0.4.1/dist/blog-cells.js"&gt;&lt;/script&gt;
+&lt;script type="module" src="https://cdn.jsdelivr.net/npm/blog-cells@0.4.1/dist/blog-cells.js"&gt;&lt;/script&gt;<h2>Notes on running code online in browser</h2>
+<p>JSX isn't natively understood by browsers, so we need to transform it into regular JavaScript. This is typically done using Babel. In this case, we're using <code>@babel/standalone</code>, which is a browser version of Babel.</p>
+<blockquote><p>If you're using Babel in production, you should normally not use <code>@babel/standalone</code>. Instead, you should use a build system running on Node.js, such as Webpack, Rollup, or Parcel, to transpile your JS ahead of time.</p>
+</blockquote>
+<pre><code class="lang-js">import { transform } from '@babel/standalone';
+
+const babelTransform = (code) =&gt; {
+  return transform(code, {
+    presets: ['react', 'typescript'],
+  }).code;
+};
+
+const jsxCode = `
+  const App = () =&gt; {
+    return &lt;h1&gt;Hello, World!&lt;/h1&gt;;
+  };
+`;
+
+const compiledCode = babelTransform(jsxCode);
+console.log(compiledCode);
+</code></pre>
+<p>Monaco Editor can provide a rich editing experience for the JSX code.</p>
+<pre><code class="lang-js">import * as monaco from 'https://esm.sh/monaco-editor@0.30.1';
+
+const editor = monaco.editor.create(document.getElementById('editor'), {
+  value: `const App = () =&gt; {
+    return &lt;h1&gt;Hello, World!&lt;/h1&gt;;
+    };`,
+  language: 'javascript',
+  theme: 'vs-dark'
+});
+</code></pre>
+<p>To prevent the main thread from being blocked during code compilation, which could cause the UI to feel sluggish, we can use a Web Worker:</p>
+<pre><code class="lang-js">// compiler.worker.js
+self.addEventListener('message', async ({ data }) =&gt; {
+  const compiledCode = babelTransform(data);
+  self.postMessage(compiledCode);
+});
+
+// main.js
+const compilerWorker = new Worker('compiler.worker.js');
+
+compilerWorker.postMessage(jsxCode);
+
+compilerWorker.addEventListener('message', ({ data }) =&gt; {
+  // data contains the compiled code
+  console.log('Compiled code:', data);
+});
+</code></pre>
+<p>To support third-party module imports, we can use import maps. This allows us to specify module paths for the browser:</p>
+<pre><code class="lang-html">&lt;script type="importmap"&gt;
+{
+  "imports": {
+    "react": "https://esm.sh/react@18.2.0",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0"
+  }
+}
+&lt;/script&gt;
+</code></pre>
+<p>To handle local module imports in the browser, we can use <code>URL.createObjectURL</code> to generate temporary URL files:</p>
+<pre><code class="lang-js">const moduleCode = `
+  export const greeting = "Hello, World!";
+`;
+
+const compiledModuleCode = babelTransform(moduleCode);
+
+const moduleURL = URL.createObjectURL(
+  new Blob([compiledModuleCode], { type: 'application/javascript' })
+);
+
+// Now you can import this module using:
+// import { greeting } from moduleURL;
+</code></pre>
+<p>To tie everything together, we need to automatically transform our import statements to use the URLs we've created. We can do this with a custom Babel plugin:</p>
+<blockquote><p>The plugin is defined as an object with a <code>visitor</code> property. The <code>ImportDeclaration</code> method will be called for every import declaration in the code being transformed. The <code>path</code> parameter represents the current path being traversed in the Abstract Syntax Tree (AST).</p>
+</blockquote>
+<pre><code class="lang-js">import { transform } from '@babel/core';
+
+const transformImportSourcePlugin = {
+  visitor: {
+    ImportDeclaration(path) {
+      // Transform the import source to a URL
+      path.node.source.value = getModuleURL(path.node.source.value);
+    }
+  }
+};
+
+const babelTransformWithPlugin = (code) =&gt; {
+  return transform(code, {
+    presets: ['react', 'typescript'],
+    plugins: [transformImportSourcePlugin]
+  }).code;
+};
+</code></pre>
+<h3>CodeSandbox and StackBlitz</h3>
+<p><strong>Sandpack</strong> is a component toolkit for creating live-running code editing experiences, powered by the online bundler used on CodeSandbox. <a href="https://sandpack.codesandbox.io">https://sandpack.codesandbox.io</a></p>
+<p><strong>WebContainers</strong> are a browser-based runtime for executing Node.js applications and operating system commands, entirely inside your browser tab. <a href="https://webcontainers.io">https://webcontainers.io</a></p>
